--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Umesh Patel - Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+</head>
+<body>
+    <!-- Hero Section -->
+    <section id="hero">
+        <div class="hero-content">
+            <h1>Umesh Patel</h1>
+            <p>Innovator | Research Enthusiast | Machine Learning Explorer</p>
+            <a href="resume.pdf" class="btn">Download Resume</a>
+            <a href="#contact" class="btn">Contact Me</a>
+        </div>
+        <div id="hero-animation"></div>
+    </section>
 
+    <!-- About Section -->
+    <section id="about">
+        <div class="about-content">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="umesh-photo.jpg" alt="Umesh Patel">
+                    </div>
+                    <div class="flip-card-back">
+                        <p>I am Umesh Patel, a student passionate about pushing the boundaries of technology and innovation through AI and machine learning.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills">
+        <h2>Skills</h2>
+        <div class="skills-grid">
+            <!-- Add skill icons here -->
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="projects-grid">
+            <!-- Add project cards here -->
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <form>
+            <!-- Contact form fields -->
+        </form>
+        <div id="map"></div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/umeshpatel" target="_blank">LinkedIn</a>
+            <a href="https://github.com/UmeshCode1" target="_blank">GitHub</a>
+        </div>
+    </footer>
+
+    <script src="scripts.js"></script>
+</body>
+</html>
