--- a/index.html
+++ b/index.html
@@ -40,7 +40,22 @@
     <section id="skills">
         <h2>Skills</h2>
         <div class="skills-grid">
-            <!-- Add skill icons here -->
+            <div class="skill">
+                <img src="icons/python.png" alt="Python">
+                <p>Python</p>
+            </div>
+            <div class="skill">
+                <img src="icons/machine-learning.png" alt="Machine Learning">
+                <p>Machine Learning</p>
+            </div>
+            <div class="skill">
+                <img src="icons/ai.png" alt="AI">
+                <p>AI</p>
+            </div>
+            <div class="skill">
+                <img src="icons/mathematics.png" alt="Mathematics">
+                <p>Mathematics</p>
+            </div>
         </div>
     </section>
 
@@ -48,7 +63,21 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="projects-grid">
-            <!-- Add project cards here -->
+            <div class="project-card">
+                <h3>AI Chatbot for Education</h3>
+                <p>A chatbot designed to assist students in learning various subjects.</p>
+                <a href="https://github.com/UmeshCode1/AI-Chatbot-for-Education" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>Mathematical Visualization App</h3>
+                <p>An application to visualize complex mathematical concepts interactively.</p>
+                <a href="https://github.com/UmeshCode1/Mathematical-Visualization-App" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>Research on Neural Networks</h3>
+                <p>A comprehensive research project on the applications of neural networks.</p>
+                <a href="https://github.com/UmeshCode1/Research-on-Neural-Networks" target="_blank">View on GitHub</a>
+            </div>
         </div>
     </section>
 
@@ -56,7 +85,10 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <form>
-            <!-- Contact form fields -->
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
         </form>
         <div id="map"></div>
     </section>
