--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="umesh-photo.jpg" alt="Umesh Patel">
+                        <img src="images/umesh-photo.jpg" alt="Umesh Patel">
                     </div>
                     <div class="flip-card-back">
                         <p>I am Umesh Patel, a student passionate about pushing the boundaries of technology and innovation through AI and machine learning.</p>
@@ -67,16 +67,19 @@
                 <h3>AI Chatbot for Education</h3>
                 <p>A chatbot designed to assist students in learning various subjects.</p>
                 <a href="https://github.com/UmeshCode1/AI-Chatbot-for-Education" target="_blank">View on GitHub</a>
+                <img src="images/ai-chatbot-project.png" alt="AI Chatbot for Education">
             </div>
             <div class="project-card">
                 <h3>Mathematical Visualization App</h3>
                 <p>An application to visualize complex mathematical concepts interactively.</p>
                 <a href="https://github.com/UmeshCode1/Mathematical-Visualization-App" target="_blank">View on GitHub</a>
+                <img src="images/math-visualization-project.png" alt="Mathematical Visualization App">
             </div>
             <div class="project-card">
                 <h3>Research on Neural Networks</h3>
                 <p>A comprehensive research project on the applications of neural networks.</p>
                 <a href="https://github.com/UmeshCode1/Research-on-Neural-Networks" target="_blank">View on GitHub</a>
+                <img src="images/neural-networks-research.png" alt="Research on Neural Networks">
             </div>
         </div>
     </section>
@@ -90,7 +93,6 @@
             <textarea name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send Message</button>
         </form>
-        <div id="map"></div>
     </section>
 
     <!-- Footer -->
