--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Umesh Patel | Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <section id="hero">
+    <div class="hero-content">
+      <div id="logo"></div>
+      <h1 class="tagline">
+        <span class="typewriter"></span>
+      </h1>
+      <div class="social-icons">
+        <a href="https://linkedin.com/in/umeshpatel" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/UmeshCode1" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://twitter.com/umeshpatel" target="_blank"><i class="fab fa-twitter"></i></a>
+      </div>
+    </div>
+  </section>
+
+  <script src="three.min.js"></script>
+  <script src="gsap.min.js"></script>
+  <script src="main.js"></script>
+</body>
+</html>
