--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Umesh Patel Portfolio</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
 </head>
 <body>
   <!-- Header -->
@@ -21,12 +21,18 @@
 
   <!-- Hero Section -->
   <section id="hero">
-    <div class="logo-3d"></div>
+    <canvas id="logoCanvas"></canvas>
     <h1 class="typewriter"></h1>
     <div class="social-icons">
-      <a href="https://github.com" target="_blank"><img src="icons/github.svg" alt="GitHub"></a>
-      <a href="https://linkedin.com" target="_blank"><img src="icons/linkedin.svg" alt="LinkedIn"></a>
-      <a href="https://twitter.com" target="_blank"><img src="icons/twitter.svg" alt="Twitter"></a>
+      <a href="https://github.com" target="_blank">
+        <img src="icons/github.svg" alt="GitHub">
+      </a>
+      <a href="https://linkedin.com" target="_blank">
+        <img src="icons/linkedin.svg" alt="LinkedIn">
+      </a>
+      <a href="https://twitter.com" target="_blank">
+        <img src="icons/twitter.svg" alt="Twitter">
+      </a>
     </div>
   </section>
 
