--- a/index.html
+++ b/index.html
@@ -374,18 +374,19 @@
 
     <section id="projects">
         <h2>Featured Projects</h2>
-        <div class="projects-grid">
-            <div class="project-card">
-                <div class="project-image"></div>
-                <div class="project-content">
-                    <h3>Project Title 1</h3>
-                    <p>Brief description of the project goes here.</p>
-                    <div class="project-tags">
-                        <span class="tag">AI</span>
-                        <span class="tag">ML</span>
-                    </div>
+    <div class="projects-grid">
+        <!-- Example of Project with Image -->
+        <div class="project-card">
+            <div class="project-image" style="background-image: url('path/to/project-image.jpg');"></div>
+            <div class="project-content">
+                <h3>Project Title 1</h3>
+                <p>Brief description of the project goes here.</p>
+                <div class="project-tags">
+                    <span class="tag">AI</span>
+                    <span class="tag">ML</span>
                 </div>
             </div>
+        </div>
             <!-- Repeat project cards as needed -->
         </div>
     </section>
