--- a/index.html
+++ b/index.html
@@ -154,8 +154,52 @@
         }
 
         .social-icons a:hover {
-            color: #4a9eff;
-            transform: scale(1.2);
+        color: #4a9eff;
+        transform: scale(1.2);
+    }
+
+    /* Glowing Effect for Social Icons */
+    .social-icons a {
+        color: #fff;
+        font-size: 1.5rem;
+        transition: 0.3s;
+        position: relative;
+    }
+
+    .social-icons a:hover {
+        color: #4a9eff;
+        transform: scale(1.2);
+    }
+
+    /* Glowing Effect on Hover */
+    .social-icons a:hover::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 100%;
+        height: 100%;
+        background: rgba(74, 158, 255, 0.5);
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        animation: glow 1s ease-out infinite;
+    }
+
+    /* Keyframes for glowing effect */
+    @keyframes glow {
+        0% {
+            transform: translate(-50%, -50%) scale(1);
+            opacity: 0.5;
+        }
+        50% {
+            transform: translate(-50%, -50%) scale(1.3);
+            opacity: 1;
+        }
+        100% {
+            transform: translate(-50%, -50%) scale(1);
+            opacity: 0.5;
+        }
+    }
         }
 
         /* Sections */
@@ -214,9 +258,26 @@
             transition: 0.3s;
         }
 
-        .project-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+         .project-card:hover {
+        transform: translateY(-10px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    }
+
+    /* Add new CSS code here */
+    /* Colorful Hover Effect for Project Cards */
+    .project-card:hover {
+        transform: translateY(-10px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        background: linear-gradient(135deg, #ff4e00, #d1c4e9);
+        transition: 0.3s ease;
+    }
+
+    /* Skill Cards Hover Animation */
+    .skill-card:hover {
+        background: linear-gradient(135deg, #ff4081, #00bcd4);
+        transform: translateY(-5px);
+        transition: 0.3s ease-in-out;
+    }
         }
 
         .project-image {
