--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio</title>
+    <title>Umesh Patel's Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         /* Reset and base styles */
@@ -59,44 +59,33 @@
 
         /* Hero Section */
         .hero {
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        padding: 2rem;
-    }
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 2rem;
+            animation: gradientBackground 8s ease-in-out infinite;
+        }
 
-    /* Add the new CSS code here */
-    /* Hero Section Background Animation */
-    .hero {
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        padding: 2rem;
-        animation: gradientBackground 8s ease-in-out infinite;
-    }
-
-    /* Keyframes for colorful gradient animation */
-    @keyframes gradientBackground {
-        0% {
-            background: linear-gradient(to bottom, #1a1a2e, #16213e);
+        /* Keyframes for colorful gradient animation */
+        @keyframes gradientBackground {
+            0% {
+                background: linear-gradient(to bottom, #1a1a2e, #16213e);
+            }
+            25% {
+                background: linear-gradient(to bottom, #ff4e00, #d1c4e9);
+            }
+            50% {
+                background: linear-gradient(to bottom, #00bcd4, #ff4081);
+            }
+            75% {
+                background: linear-gradient(to bottom, #00bfae, #ffca28);
+            }
+            100% {
+                background: linear-gradient(to bottom, #1a1a2e, #16213e);
+            }
         }
-        25% {
-            background: linear-gradient(to bottom, #ff4e00, #d1c4e9);
-        }
-        50% {
-            background: linear-gradient(to bottom, #00bcd4, #ff4081);
-        }
-        75% {
-            background: linear-gradient(to bottom, #00bfae, #ffca28);
-        }
-        100% {
-            background: linear-gradient(to bottom, #1a1a2e, #16213e);
-        }
-    }
 
         .logo-container {
             position: relative;
@@ -154,52 +143,36 @@
         }
 
         .social-icons a:hover {
-        color: #4a9eff;
-        transform: scale(1.2);
-    }
-
-    /* Glowing Effect for Social Icons */
-    .social-icons a {
-        color: #fff;
-        font-size: 1.5rem;
-        transition: 0.3s;
-        position: relative;
-    }
-
-    .social-icons a:hover {
-        color: #4a9eff;
-        transform: scale(1.2);
-    }
-
-    /* Glowing Effect on Hover */
-    .social-icons a:hover::after {
-        content: '';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 100%;
-        height: 100%;
-        background: rgba(74, 158, 255, 0.5);
-        border-radius: 50%;
-        transform: translate(-50%, -50%);
-        animation: glow 1s ease-out infinite;
-    }
-
-    /* Keyframes for glowing effect */
-    @keyframes glow {
-        0% {
-            transform: translate(-50%, -50%) scale(1);
-            opacity: 0.5;
+            color: #4a9eff;
+            transform: scale(1.2);
         }
-        50% {
-            transform: translate(-50%, -50%) scale(1.3);
-            opacity: 1;
+
+        .social-icons a:hover::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            height: 100%;
+            background: rgba(74, 158, 255, 0.5);
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+            animation: glow 1s ease-out infinite;
         }
-        100% {
-            transform: translate(-50%, -50%) scale(1);
-            opacity: 0.5;
-        }
-    }
+
+        @keyframes glow {
+            0% {
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 0.5;
+            }
+            50% {
+                transform: translate(-50%, -50%) scale(1.3);
+                opacity: 1;
+            }
+            100% {
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 0.5;
+            }
         }
 
         /* Sections */
@@ -258,26 +231,11 @@
             transition: 0.3s;
         }
 
-         .project-card:hover {
-        transform: translateY(-10px);
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    }
-
-    /* Add new CSS code here */
-    /* Colorful Hover Effect for Project Cards */
-    .project-card:hover {
-        transform: translateY(-10px);
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-        background: linear-gradient(135deg, #ff4e00, #d1c4e9);
-        transition: 0.3s ease;
-    }
-
-    /* Skill Cards Hover Animation */
-    .skill-card:hover {
-        background: linear-gradient(135deg, #ff4081, #00bcd4);
-        transform: translateY(-5px);
-        transition: 0.3s ease-in-out;
-    }
+        .project-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            background: linear-gradient(135deg, #ff4e00, #d1c4e9);
+            transition: 0.3s ease;
         }
 
         .project-image {
@@ -404,12 +362,12 @@
                 <div class="logo-glow"></div>
                 <img src="/api/placeholder/150/150" alt="Logo" class="logo">
             </div>
-            <h1>Your Name</h1>
-            <div class="typewriter"></div>
+            <h1>Umesh Patel</h1>
+            <div class="typewriter">AI Enthusiast | Machine Learning Explorer | Innovator</div>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fas fa-envelope"></i></a>
+                <a href="https://github.com/umeshpatel"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/umesh-patel"><i class="fab fa-linkedin"></i></a>
+                <a href="mailto:umesh.patel@example.com"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </section>
@@ -418,8 +376,8 @@
         <h2>About Me</h2>
         <div class="about-grid">
             <div>
-                <p>Your professional summary goes here. Describe your expertise in AI, machine learning, and innovation.</p>
-                <p>Share your journey, achievements, and what drives you in the field of technology.</p>
+                <p>I am Umesh Patel, a passionate AI researcher and Machine Learning enthusiast. I specialize in deep learning, data science, and AI-driven innovations. My goal is to build intelligent systems that can solve real-world problems and push the boundaries of technology.</p>
+                <p>With a background in mathematics and computer science, I am constantly exploring new advancements in AI, machine learning, and other cutting-edge technologies to make an impact in various industries.</p>
             </div>
             <div>
                 <h3>Skills</h3>
@@ -428,6 +386,8 @@
                     <div class="skill-card">Deep Learning</div>
                     <div class="skill-card">Python</div>
                     <div class="skill-card">TensorFlow</div>
+                    <div class="skill-card">Computer Vision</div>
+                    <div class="skill-card">Data Science</div>
                 </div>
             </div>
         </div>
@@ -435,27 +395,38 @@
 
     <section id="projects">
         <h2>Featured Projects</h2>
-    <div class="projects-grid">
-        <!-- Example of Project with Image -->
-        <div class="project-card">
-            <div class="project-image" style="background-image: url('path/to/project-image.jpg');"></div>
-            <div class="project-content">
-                <h3>Project Title 1</h3>
-                <p>Brief description of the project goes here.</p>
-                <div class="project-tags">
-                    <span class="tag">AI</span>
-                    <span class="tag">ML</span>
+        <div class="projects-grid">
+            <div class="project-card">
+                <div class="project-image" style="background-image: url('path/to/your/project-image1.jpg');"></div>
+                <div class="project-content">
+                    <h3>AI-Powered Chatbot</h3>
+                    <p>This project leverages natural language processing (NLP) to create an intelligent chatbot capable of answering user queries effectively and learning over time.</p>
+                    <div class="project-tags">
+                        <span class="tag">AI</span>
+                        <span class="tag">NLP</span>
+                        <span class="tag">Python</span>
+                    </div>
                 </div>
             </div>
-        </div>
-            <!-- Repeat project cards as needed -->
+            <div class="project-card">
+                <div class="project-image" style="background-image: url('path/to/your/project-image2.jpg');"></div>
+                <div class="project-content">
+                    <h3>Image Classification Model</h3>
+                    <p>A deep learning model built using TensorFlow for image classification, designed to identify objects in images with high accuracy.</p>
+                    <div class="project-tags">
+                        <span class="tag">Deep Learning</span>
+                        <span class="tag">TensorFlow</span>
+                        <span class="tag">Computer Vision</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
     <section id="contact">
         <h2>Get In Touch</h2>
         <p>Interested in collaborating? Let's connect!</p>
-        <button class="contact-button">Contact Me</button>
+        <button class="contact-button">Let's Collaborate</button>
     </section>
 
     <div class="scroll-top">
@@ -464,7 +435,7 @@
 
     <script>
         // Typewriter effect
-        const text = "Innovator | AI Enthusiast | Machine Learning Explorer";
+        const text = "AI Enthusiast | Machine Learning Explorer | Innovator";
         const typewriter = document.querySelector('.typewriter');
         let i = 0;
 
