--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
             color: #fff;
             font-size: 1.5rem;
             transition: 0.3s;
+            position: relative;
         }
 
         .social-icons a:hover {
