--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
 
         .logo-container {
             position: relative;
-            width: 150px;
-            height: 150px;
+            width: 200px;
+            height: 200px;
             margin: 0 auto 2rem;
+            perspective: 1000px; /* Define how far the object is from the view */
             animation: float 6s ease-in-out infinite;
         }
 
@@ -99,6 +100,7 @@
             width: 100%;
             height: 100%;
             object-fit: contain;
+            transform-style: preserve-3d;
             animation: spin 20s linear infinite;
         }
 
@@ -361,7 +363,7 @@
         <div class="hero-content">
             <div class="logo-container">
                 <div class="logo-glow"></div>
-                <img src="/api/placeholder/150/150" alt="Logo" class="logo">
+                <img src="https://github.com/UmeshCode1/Profile/blob/main/transparent_background_image.png" alt="Logo" class="logo">
             </div>
             <h1>Umesh Patel</h1>
             <div class="typewriter">AI Enthusiast | Machine Learning Explorer | Innovator</div>
